fixed up the spacing in the index.html page, cleaned up some of the code, changed out  the title, and commented out redundant code

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 body {
     background-image:url("images/campbell-boulanger-521234-unsplash.jpg");
     background-repeat: no-repeat;
-    background-size:960px;
+    /* background-size:960px; */
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
